[tool.poetry]
name = "patcit"
version = "0.3.0"
description = "Unpack the innovation system"
authors = ["Cyril Verluise <cyril.verluise@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
patcit = "patcit.main:app"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.2"
beautifulsoup4 = "^4.8.2"
lxml = "^4.6.5"
asyncio = "^3.4.3"
jsonschema = "^3.2.0"
smart_open = "^1.9.0"
tqdm = "^4.50.2"
wasabi = "^0.8.0"
tabulate = "^0.8.7"
pycld2 = "^0.41"
glom = "^20.8.0"
fuzzysearch = "^0.7.3"
dateparser = "^0.7.6"
plotly = "^4.11.0"
sklearn = "^0.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"}
spacy = "^2.3.2"
spacy-lookups-data = "^0.3.2"
typer =  {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.0.1"
mkdocs-material = "^6.1.3"
pymdown-extensions = "^8.0.1"
Pygments = "^2.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
